# gha-test

./: .gitignore  Cargo.toml  Dockerfile  a.txt  logs.out  package-lock.json  package.json  readme.md  test branch protection.txt  test.py  vid.mov
.github/workflows/: backup syntax.yml  backup.back  test.yml  workflow.yml  workflow2.yml
api/: Cargo.toml  a.txt  abc.txt  allen.yaml  api.py  env.yml  py.yaml  test-api.py
api/test/: a.txt
api/test/adg/: test.py
gui/: b  b.py  package-lock.json  package.json
gui/cypress/integration/: test-spec.js
hello_cargo/: Cargo.toml
src/: lib.rs  libs.rs  main.rs
test-app/api/: allen.yml
